--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'io.grpc:grpc-netty-shaded:1.12.0' // shaded: includes ssl libraries
     compile 'io.grpc:grpc-protobuf:1.12.0'
     compile 'io.grpc:grpc-stub:1.12.0'
+    compile "io.grpc:grpc-services:1.12.0"   // reflection
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
