--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    // https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync
+    compile group: 'org.mongodb', name: 'mongodb-driver-sync', version: '3.8.2'
 
 }
 
