--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,12 @@ protobuf {
         }
     }
 }
+
+// if you have source imports issues, add the below
+sourceSets.main.java.srcDir new File(buildDir, 'generated/source')
+idea {
+    module {
+        // Marks the already(!) added srcDir as "generated"
+        generatedSourceDirs += file('build/generated/source')
+    }
+}
