--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,25 @@
+plugins {
+    id 'java'
+    id 'com.google.protobuf' version '0.8.10'
+    id 'idea'
+}
+
 group 'com.github.simplesteph.grpc'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'com.google.protobuf'
-apply plugin: 'idea'
-
 sourceCompatibility = 1.8
-
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        // ASSUMES GRADLE 2.12 OR HIGHER. Use plugin version 0.7.5 with earlier
-        // gradle versions
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.5'
-    }
-}
-
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-
-    // grpc
-    compile 'io.grpc:grpc-netty-shaded:1.12.0' // shaded: includes ssl libraries
-    compile 'io.grpc:grpc-protobuf:1.12.0'
-    compile 'io.grpc:grpc-stub:1.12.0'
-    compile "io.grpc:grpc-services:1.12.0"   // reflection
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
-    // https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync
-    compile group: 'org.mongodb', name: 'mongodb-driver-sync', version: '3.8.2'
-
-}
-
-
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.5.1-1"
+        artifact = "com.google.protobuf:protoc:3.10.0"
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.12.0'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.24.0'
         }
     }
     generateProtoTasks {
@@ -54,6 +27,18 @@ protobuf {
             grpc {}
         }
     }
+}
+
+dependencies {
+    implementation 'io.grpc:grpc-netty-shaded:1.24.0'
+    implementation 'io.grpc:grpc-protobuf:1.24.0'
+    implementation 'io.grpc:grpc-stub:1.24.0'
+    implementation "io.grpc:grpc-services:1.24.0"   // reflection
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    // https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync
+    compile group: 'org.mongodb', name: 'mongodb-driver-sync', version: '3.8.2'
 }
 
 // if you have source imports issues, add the below
