--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+// updated October 2019 to include the newer Gradle syntax
+// nothing else changes with the course, happy learning!
+
 plugins {
     id 'java'
     id 'com.google.protobuf' version '0.8.10'
